<resources>
    <string name="app_name">Money Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_more">More</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_profile">Profile</string>
    <string name="title_sync">Backup</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About Us</string>
    <string name="title_help">Help</string>
    <string name="title_prompt">Type</string>
    <string name="title_view">View</string>
    <string name="title_edit">Edit</string>
    <string name="title_image">Image</string>
    <string name="title_reset">Reset</string>
    <string name="reset_paragraph">This operation will clear all your transactions. \n\n Do you want to proceed?</string>
    <string-array name="type_arrays_type_home">
        <item>Expense</item>
        <item>Income</item>
    </string-array>
</resources>