<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/application_navigation.xml"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="mobile.computing.group5.moneytracker.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="mobile.computing.group5.moneytracker.fragments.transaction.TransactionFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transaction">
        <action
            android:id="@+id/action_navigation_transactions_to_navigation_view"
            app:destination="@id/navigation_view" />
    </fragment>

    <fragment
        android:id="@+id/navigation_view"
        android:name="mobile.computing.group5.moneytracker.fragments.transaction.ViewTransactionFragment"
        android:label="@string/title_view"
        tools:layout="@layout/fragment_transaction_view">
        <action
            android:id="@+id/action_navigation_view_to_navigation_edit"
            app:destination="@id/navigation_edit" />
        <action
            android:id="@+id/action_navigation_view_to_navigation_transactions"
            app:destination="@id/navigation_transactions" />
        <action
            android:id="@+id/action_navigation_view_to_navigation_view_image"
            app:destination="@id/navigation_view_image" />
    </fragment>

    <fragment
        android:id="@+id/navigation_view_image"
        android:name="mobile.computing.group5.moneytracker.fragments.transaction.ViewImageFragment"
        android:label="@string/title_image"
        tools:layout="@layout/fragment_view_image">
        <action
            android:id="@+id/action_navigation_view_image_to_navigation_view"
            app:destination="@id/navigation_view" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit"
        android:name="mobile.computing.group5.moneytracker.fragments.transaction.EditTransactionFragment"
        android:label="@string/title_edit"
        tools:layout="@layout/fragment_transaction_edit" >
        <action
            android:id="@+id/action_navigation_edit_to_navigation_transactions"
            app:destination="@id/navigation_transactions" />
        <action
            android:id="@+id/action_navigation_edit_to_navigation_view"
            app:destination="@id/navigation_view" />
    </fragment>

    <fragment
        android:id="@+id/navigation_more"
        android:name="mobile.computing.group5.moneytracker.fragments.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" >
        <action
            android:id="@+id/action_navigation_more_to_navigation_statistics"
            app:destination="@id/navigation_statistics" />
        <action
            android:id="@+id/action_navigation_more_to_navigation_reset"
            app:destination="@id/navigation_reset" />
        <action
            android:id="@+id/action_navigation_more_to_navigation_about"
            app:destination="@id/navigation_about" />
        <action
            android:id="@+id/action_navigation_more_to_navigation_help"
            app:destination="@id/navigation_help" />
        <action
            android:id="@+id/action_navigation_more_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="mobile.computing.group5.moneytracker.fragments.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics">
        <action
            android:id="@+id/action_navigation_statistics_to_navigation_more"
            app:destination="@id/navigation_more" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="mobile.computing.group5.moneytracker.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_navigation_more"
            app:destination="@id/navigation_more" />
    </fragment>

    <fragment
        android:id="@+id/navigation_reset"
        android:name="mobile.computing.group5.moneytracker.fragments.reset.ResetFragment"
        android:label="@string/title_reset"
        tools:layout="@layout/fragment_reset">
        <action
            android:id="@+id/action_navigation_reset_to_navigation_more"
            app:destination="@id/navigation_more" />
        <action
            android:id="@+id/action_navigation_reset_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="mobile.computing.group5.moneytracker.fragments.aboutUs.AboutUsFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_aboutus">
        <action
            android:id="@+id/action_navigation_aboutus_to_navigation_more"
            app:destination="@id/navigation_more" />
    </fragment>

    <fragment
        android:id="@+id/navigation_help"
        android:name="mobile.computing.group5.moneytracker.fragments.help.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help">
        <action
            android:id="@+id/action_navigation_help_to_navigation_more"
            app:destination="@id/navigation_more" />
    </fragment>

</navigation>